Changing run in Circle ci 7